samples/_failures_safe/1761088975_9f5904_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_03bb2a18.c: In function ‘main’:
./samples/SAFE/__tmp_03bb2a18.c:131:29: error: expected ‘)’ at end of input
  131 |     if (scanf("%d", &choice)
      |        ~                    ^
      |                             )
./samples/SAFE/__tmp_03bb2a18.c:131:5: error: expected declaration or statement at end of input
  131 |     if (scanf("%d", &choice)
      |     ^~
